fix z-index of models

--- a/scss/blocks/_models.scss
+++ b/scss/blocks/_models.scss
@@ -37,7 +37,9 @@
   }
 
   & h3 {
+    position: relative;
     padding: 0 2em;
+    z-index: 2;
   }
 
   & h3 a {
